--- a/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
@@ -11,20 +11,22 @@
 
 @foreach (var item in Model.Items)
 {
-    <div class="cart-row@(!item.Active ? " cart-item-inactive" : string.Empty)" data-key="@item.Id" data-parent-key="@item.Id">
-        <div class="row">
-            <div sm-if="Model.AllowActivatableCartItems && Model.IsEditable" class="select-cart-item col-auto">
-                <input name="SelectCartItem@(item.Id)" type="checkbox" 
+    <div class="cart-row" attr-class='(!item.Active, "cart-item-inactive")' data-key="@item.Id" data-parent-key="@item.Id" >
+        <div class="row" role="row">
+            <div sm-if="Model.AllowActivatableCartItems && Model.IsEditable" class="select-cart-item col-auto" role="cell">
+                <input name="SelectCartItem@(item.Id)" 
+                       type="checkbox" 
                        class="form-check-input select-cart-item-checkbox" 
-                       attr-checked='(item.Active, "checked")' />
+                       attr-checked='(item.Active, "checked")' 
+                       aria-labelledby="cart-item-link-@(item.Id)" />
             </div>
             @* Image *@
-            <div sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()" class="cart-item-img col-3">
+            <div sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()" class="cart-item-img col-3" role="cell">
                 <img sm-model="item.Image" class="img-fluid" attr-alt='(item.Image.Alt.IsEmpty(), item.ProductName)' />
             </div>
 
             @* Data *@
-            <div class="cart-item-data col">
+            <div class="cart-item-data col" role="cell">
                 <partial name="CartItem.Details" model="item" view-data="parentViewData" />
 
                 @* User Agreement & ESD *@
@@ -45,7 +47,7 @@
                 </div>
 
                 @* Warnings *@
-                <div sm-if="item.Warnings.Count > 0" class="alert alert-danger cart-item-group">
+                <div sm-if="item.Warnings.Count > 0" class="alert alert-danger cart-item-group" role="alert">
                     @foreach (var warning in item.Warnings)
                     {
                         <p>@Html.Raw(warning)</p>
@@ -57,18 +59,17 @@
 
                 @* Actions *@
                 <div sm-if="Model.IsEditable" class="cart-item-actions hstack flex-wrap pt-2">
-                    <a class="btn btn-secondary btn-to-danger btn-sm btn-icon ajax-action-link"
-                        title="@T("Common.Remove")"
-                        href="#"
-                        rel="nofollow"
-                        data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id })'
-                        data-name="@item.ProductName"
-                        data-type="cart"
-                        data-id="@item.Id"
-                        data-action="remove">
-                        <i class="far fa-trash-can"></i>
-                        <span class="d-none">@T("Common.Remove")</span>
-                    </a>
+                    <button class="btn btn-secondary btn-to-danger btn-sm btn-icon ajax-action-link"
+                            type="button"
+                            title="@T("Common.Remove")"
+                            data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id })'
+                            data-name="@item.ProductName"
+                            data-type="cart"
+                            data-id="@item.Id"
+                            data-action="remove">
+                        <i class="far fa-trash-can" aria-hidden="true"></i>
+                        <span class="sr-only">@T("Common.Remove")</span>
+                    </button>
 
                     <div class="cart-item-qty">
                         @Html.EditorFor(x => item, "QtyInput", new
@@ -79,11 +80,15 @@
                                 data_href = Url.Action("UpdateCartItem", "ShoppingCart", new { cartItemId = item.Id, isCartPage = true }),
                                 data_sci_item = item.Id,
                                 id = $"itemquantity{item.Id}",
-                                name = $"itemquantity{item.Id}"
+                                name = $"itemquantity{item.Id}",
+                                aria_labelledby = $"cart-item-link-{item.Id}",
                             }
                         })
 
-                        <span class="field-validation-valid" data-valmsg-for="itemquantity@(item.Id)" data-valmsg-replace="true"></span>
+                        <span class="field-validation-valid" 
+                              data-valmsg-for="itemquantity@(item.Id)" 
+                              data-valmsg-replace="true"
+                              role="alert"></span>
 
                         <script>
                         $(function () {
@@ -95,17 +100,17 @@
                         </script>
                     </div>
 
-                    <a sm-if="Model.DisplayMoveToWishlistButton && !item.DisableWishlistButton" class="btn btn-secondary btn-sm ajax-action-link"
-                        title="@T("ShoppingCart.MoveToWishlist")"
-                        href="#"
-                        rel="nofollow"
-                        data-href='@Url.Action("MoveItemBetweenCartAndWishlist", "ShoppingCart", new { cartItemId = item.Id, cartType = ShoppingCartType.ShoppingCart, isCartPage = true })'
-                        data-name="@item.ProductName"
-                        data-type="wishlist"
-                        data-action="addfromcart">
-                        <i class="fal fa-heart"></i>
+                    <button sm-if="Model.DisplayMoveToWishlistButton && !item.DisableWishlistButton" 
+                            type="button"
+                            class="btn btn-secondary btn-sm ajax-action-link"
+                            title="@T("ShoppingCart.MoveToWishlist")"
+                            data-href='@Url.Action("MoveItemBetweenCartAndWishlist", "ShoppingCart", new { cartItemId = item.Id, cartType = ShoppingCartType.ShoppingCart, isCartPage = true })'
+                            data-name="@item.ProductName"
+                            data-type="wishlist"
+                            data-action="addfromcart">
+                        <i class="fal fa-heart" aria-hidden="true"></i>
                         <span class="d-none d-md-inline fwn">@T("ShoppingCart.MoveToWishlist")</span>
-                    </a>
+                    </button>
                 </div>
             </div>
         </div>
