--- a/src/Smartstore.Web/Views/Shared/Partials/CartWarnings.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartWarnings.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<string>
 
-<div sm-if="Model.Count > 0" class="alert alert-danger">
+<div sm-if="Model.Count > 0" class="alert alert-danger" role="alert" aria-atomic="true">
     <ul>
         @foreach (var warning in Model)
         {
