--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/_DiscountBox.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/_DiscountBox.cshtml
@@ -12,11 +12,18 @@
 }
 
 <div class="cart-action cart-action-coupon">
-    <h5 class="cart-action-title" attr-class='(!isExpanded, "collapsed")' data-toggle="collapse" data-target="#cart-action-coupon-body" aria-controls="cart-action-coupon-body" aria-expanded="@isExpanded.ToString().ToLower()">
+    <div class="cart-action-title h5" 
+         attr-class='(!isExpanded, "collapsed")' 
+         data-toggle="collapse" 
+         data-target="#cart-action-coupon-body" 
+         aria-controls="cart-action-coupon-body" 
+         aria-expanded="@isExpanded.ToString().ToLower()"
+         tabindex="0"
+         role="button">
 		@T("ShoppingCart.DiscountCouponCode")
-	</h5>
+	</div>
         
-    <div class="cart-action-body collapse" id="cart-action-coupon-body" aria-expanded="@isExpanded.ToString().ToLower()" attr-class='(isExpanded, "show")'>
+    <div class="cart-action-body collapse" id="cart-action-coupon-body" attr-class='(isExpanded, "show")'>
         @if (Model.Message.HasValue())
         {
             <div class="alert d-flex justify-content-between alert-@(Model.IsWarning ? "danger" : "success") fade show">
