--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/_RewardPointsBox.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/_RewardPointsBox.cshtml
@@ -12,12 +12,19 @@
 }
 
 <div class="cart-action cart-action-rewardpoints">
-    <h5 class="cart-action-title" attr-class='(!isExpanded, "collapsed")' data-toggle="collapse" data-target="#cart-action-rewardpoints-body" aria-controls="cart-action-rewardpoints-body" aria-expanded="@isExpanded.ToString().ToLower()">
+    <div class="cart-action-title h5" 
+         attr-class='(!isExpanded, "collapsed")' 
+         data-toggle="collapse" 
+         data-target="#cart-action-rewardpoints-body" 
+         aria-controls="cart-action-rewardpoints-body" 
+         aria-expanded="@isExpanded.ToString().ToLower()"
+         tabindex="0"
+         role="button">
         @T("ShoppingCart.RewardPoints")
         <span sm-if="Model.RewardPointsBalance > 0" class="badge badge-pill badge-counter badge-success">@Model.RewardPointsBalance</span>
-    </h5>
+    </div>
 
-    <div class="cart-action-body collapse" attr-class='(isExpanded, "show")' id="cart-action-rewardpoints-body" aria-expanded="@isExpanded.ToString().ToLower()">
+    <div class="cart-action-body collapse" attr-class='(isExpanded, "show")' id="cart-action-rewardpoints-body">
         <div class="reward-points alert alert-info">
             <div class="form-check">
                 <input asp-for="UseRewardPoints" type="checkbox" sm-ignore-label="true" sm-switch="false" class="form-check-input"/>                
