--- a/src/Smartstore.Web/Views/ReturnRequest/ReturnRequest.cshtml
+++ b/src/Smartstore.Web/Views/ReturnRequest/ReturnRequest.cshtml
@@ -14,7 +14,7 @@
     <div class="page-body">
         @if (Model.Result.HasValue())
         {
-            <div class="alert alert-success">
+            <div class="alert alert-success" role="alert">
                 @Model.Result
             </div>
         }
@@ -23,7 +23,9 @@
             <form asp-action="ReturnRequest">
                 <input type="hidden" asp-for="OrderId" />
 
-                <h2 class="h4 fwn text-muted mb-4">@T("ReturnRequests.SelectProduct(s)")</h2>
+                <div class="h4 fwn text-muted mb-4" role="heading" aria-level="2">
+                    @T("ReturnRequests.SelectProduct(s)")
+                </div>
 
                 <zone name="returnrequest_wish_before" />
 
@@ -48,16 +50,16 @@
                                     <div class="cart-item-price-group cart-item-group">
                                         <div>@T("ReturnRequests.Products.Price"):</div>
                                         <div class="pd-finalprice">
-                                            <span class="pd-finalprice-amount fs-h5">
-                                                @item.UnitPrice
-                                            </span>
+                                            <data asp-for="@item.UnitPrice" class="pd-finalprice-amount fs-h5"></data>
                                         </div>
                                     </div>
 
                                     <div class="cart-item-group">
-                                        <div class="mb-1">@T("ReturnRequests.Products.Quantity"):</div>
+                                        <div class="mb-1">
+                                            <label for="quantity@(item.Id)" class="mb-0">@T("ReturnRequests.Products.Quantity"):</label>
+                                        </div>
                                         <div style="max-width: 120px">
-                                            <select name="quantity@(item.Id)" class="form-control noskin">
+                                            <select id="quantity@(item.Id)" name="quantity@(item.Id)" class="form-control noskin">
                                                 @for (int i = 0; i <= item.Quantity; i++)
                                                 {
                                                     <option value="@(i)">@(i)</option>
@@ -75,18 +77,26 @@
                 <div class="mt-5">
                     <div class="form-group row">
                         <div class="col-md-3">
-                            <label asp-for="ReturnReason" class="col-form-label"></label>
+                            <label id="return-reason-label" asp-for="ReturnReason" class="col-form-label"></label>
                         </div>
                         <div class="col-md-9">
-                            <select asp-for="ReturnReason" asp-items="ViewBag.AvailableReturnReasons" sm-required="true" class="return-reasons"></select>
+                            <select asp-for="ReturnReason" 
+                                    asp-items="ViewBag.AvailableReturnReasons" 
+                                    sm-required="true" 
+                                    class="return-reasons"
+                                    aria-labelledby="return-reason-label"></select>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="col-md-3">
-                            <label asp-for="ReturnAction" class="col-form-label"></label>
+                            <label id="return-action-label" asp-for="ReturnAction" class="col-form-label"></label>
                         </div>
                         <div class="col-md-9">
-                            <select asp-for="ReturnAction" asp-items="ViewBag.AvailableReturnActions" sm-required="true" class="return-actions"></select>
+                            <select asp-for="ReturnAction" 
+                                    asp-items="ViewBag.AvailableReturnActions" 
+                                    sm-required="true" 
+                                    class="return-actions"
+                                    aria-labelledby="return-action-label"></select>
                         </div>
                     </div>
                     <div class="form-group row">
