--- a/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
@@ -14,6 +14,7 @@
 }
 
 <div class="order-summary-content cart-content"
+     aria-live="polite"
      data-empty-text="@T("ShoppingCart.CartIsEmpty")"
      data-update-item-url="@Url.Action("UpdateCartItem", "ShoppingCart")">
     <zone name="order_summary_content_before" />
