--- a/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
@@ -81,7 +81,7 @@
                                 data_sci_item = item.Id,
                                 id = $"itemquantity{item.Id}",
                                 name = $"itemquantity{item.Id}",
-                                aria_labelledby = $"cart-item-link-{item.Id}",
+                                aria_labelledby = $"cart-item-link-{item.Id}"
                             }
                         })
 
