--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/WishlistItems.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/WishlistItems.cshtml
@@ -16,14 +16,14 @@
             <input type="checkbox" name="addtocart" class="form-check-input" value="@(item.Id)" />
         </div>
 
-        <div class="row">
+        <div class="row" role="row">
             @* Image *@
-            <div class="cart-item-img col-3" sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()">
+            <div class="cart-item-img col-3" sm-if="Model.ShowProductImages && item.Image != null && item.Image.HasImage()"  role="cell">
                 <img sm-model="item.Image" class="img-fluid" attr-alt='(item.Image.Alt.IsEmpty(), item.ProductName)' />
             </div>
 
             @* Data *@
-            <div class="cart-item-data col">
+            <div class="cart-item-data col" role="cell">
                 <partial name="CartItem.Details" model="item" view-data="parentViewData" />
 
                 @* Custom zone *@
@@ -31,17 +31,16 @@
 
                 @* Actions *@
                 <div sm-if="Model.IsEditable" class="cart-item-actions hstack flex-wrap pt-2">
-                    <a class="btn btn-secondary btn-to-danger btn-sm btn-icon ajax-action-link"
-                       title="@T("Common.Remove")"
-                       href="#"
-                       rel="nofollow"
-                       data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id, isWishlist = true })'
-                       data-name="@item.ProductName"
-                       data-type="wishlist"
-                       data-action="remove">
-                        <i class="far fa-trash-can"></i>
-                        <span class="d-none">@T("Common.Remove")</span>
-                    </a>
+                    <button class="btn btn-secondary btn-to-danger btn-sm btn-icon ajax-action-link"
+                            type="button"
+                            title="@T("Common.Remove")"
+                            data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id, isWishlist = true })'
+                            data-name="@item.ProductName"
+                            data-type="wishlist"
+                            data-action="remove">
+                        <i class="far fa-trash-can" aria-hidden="true"></i>
+                        <span class="sr-only">@T("Common.Remove")</span>
+                    </button>
 
                     <div class="cart-item-qty">
                         @Html.EditorFor(x => item, "QtyInput", new
@@ -52,11 +51,15 @@
                                 data_href = Url.Action("UpdateCartItem", "ShoppingCart", new { cartItemId = item.Id, isCartPage = true }),
                                 data_sci_item = item.Id,
                                 id = $"itemquantity{item.Id}",
-                                name = $"itemquantity{item.Id}"
+                                name = $"itemquantity{item.Id}",
+                                aria_labelledby = $"cart-item-link-{item.Id}"
                             }
                         })
 
-                        <span class="field-validation-valid" data-valmsg-for="itemquantity@(item.Id)" data-valmsg-replace="true"></span>
+                        <span class="field-validation-valid" 
+                              data-valmsg-for="itemquantity@(item.Id)" 
+                              data-valmsg-replace="true"
+                              role="alert"></span>
 
                         <script>
                             $(function () {
@@ -68,17 +71,17 @@
                         </script>
                     </div>
 
-                    <a sm-if="Model.DisplayAddToCart && !item.DisableBuyButton" class="btn btn-primary btn-sm ajax-action-link"
-                       title="@T("ShoppingCart.AddToCart")"
-                       href="#"
-                       rel="nofollow"
-                       data-href="@Url.Action("MoveItemBetweenCartAndWishlist", "ShoppingCart", new { cartItemId = item.Id, cartType = ShoppingCartType.Wishlist, isCartPage = true })"
-                       data-name="@item.ProductName"
-                       data-type="cart"
-                       data-action="addfromcart">
-                        <i class="fa fa-cart-arrow-down"></i>
+                    <button sm-if="Model.DisplayAddToCart && !item.DisableBuyButton" 
+                            type="button"
+                            class="btn btn-primary btn-sm ajax-action-link"
+                            title="@T("ShoppingCart.AddToCart")"
+                            data-href="@Url.Action("MoveItemBetweenCartAndWishlist", "ShoppingCart", new { cartItemId = item.Id, cartType = ShoppingCartType.Wishlist, isCartPage = true })"
+                            data-name="@item.ProductName"
+                            data-type="cart"
+                            data-action="addfromcart">
+                        <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
                         <span class="d-none d-md-inline">@T("ShoppingCart.AddToCart")</span>
-                    </a>
+                    </button>
                 </div>
             </div>
         </div>
