--- a/src/Smartstore.Web/Views/ShoppingCart/Wishlist.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Wishlist.cshtml
@@ -16,6 +16,7 @@
     </div>
     <div class="page-body">
         <div class="wishlist-content cart-content" 
+             aria-live="polite"
              data-update-item-url="@Url.Action("UpdateCartItem", "ShoppingCart")"
              data-empty-text=@T("Wishlist.CartIsEmpty").JsValue>
             <zone name="wishlist_items_top" />
@@ -43,14 +44,14 @@
                         @if (Model.IsEditable && Model.EmailWishlistEnabled)
                         {
                             <a asp-action="EmailWishlist" rel="nofollow" class="btn btn-secondary">
-                                <i class="fa fa-share"></i>
+                                <i class="fa fa-share" aria-hidden="true"></i>
                                 <span>@T("Wishlist.EmailAFriend")</span>
                             </a>
                         }
                         @if (!Model.IsEditable && Model.DisplayAddToCart)
                         {
                             <button type="submit" name="addtocartbutton" value="addtocartbutton" class="btn btn-primary">
-                                <i class="fa fa-cart-arrow-down"></i>
+                                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
                                 <span>@T("ShoppingCart.AddToCart")</span>
                             </button>
                         }
