WCAG: Fixed `aria-input-field-name` rule violation in product lists

--- a/src/Smartstore.Web/Views/Catalog/RecentlyViewedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/RecentlyViewedProducts.cshtml
@@ -19,7 +19,7 @@
         }
         else
         {
-            <div class="alert alert-warning">
+            <div class="alert alert-warning" role="alert">
                 @T("Common.ListIsEmpty")
             </div>
         }
