--- a/src/Smartstore.Web/Views/Shared/Partials/JavaScriptDisabledWarning.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/JavaScriptDisabledWarning.cshtml
@@ -8,7 +8,7 @@
 }
 
 <noscript>
-    <div class="noscript">
+    <div class="noscript" role="alert">
         <p>
             <strong>JavaScript seem to be disabled in your browser.</strong>
         </p>
