--- a/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
@@ -66,9 +66,9 @@
                             data-name="@item.ProductName"
                             data-type="cart"
                             data-id="@item.Id"
-                            data-action="remove">
+                            data-action="remove"
+                            aria-label="@T("Common.Remove")">
                         <i class="far fa-trash-can" aria-hidden="true"></i>
-                        <span class="sr-only">@T("Common.Remove")</span>
                     </button>
 
                     <div class="cart-item-qty">
