--- a/src/Smartstore.Web/Views/Shared/Layouts/_Document.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_Document.cshtml
@@ -2,7 +2,7 @@
 <html sm-language-attributes-for="WorkContext.WorkingLanguage" data-pnotify-firstpos1="0">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="HandheldFriendly" content="true" />
     <meta name="description" content="@Assets.GetMetaDescription()" />
     <meta name="keywords" content="@Assets.GetMetaKeywords()" />
