WCAG: "Skip to main content" button

--- a/src/Smartstore.Web/Views/Shared/Layouts/_Layout.Off.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_Layout.Off.cshtml
@@ -11,6 +11,10 @@
     }
 }
 
+<a href="#content-center" id="skip-to-content" class="btn btn-primary btn-lg rounded-pill">
+    @T("Common.SkipToMainContent")
+</a>
+
 <div id="page">
     <div class="page-main">
         <header id="header">
