--- a/src/Smartstore.Web/Views/Shared/Layouts/_Layout.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_Layout.cshtml
@@ -29,6 +29,10 @@
     }
 }
 
+<a href="#content-center" id="skip-to-content" class="btn btn-primary btn-lg rounded-pill">
+    @T("Common.SkipToMainContent")
+</a>
+
 <div id="page">
     <div class="canvas-blocker canvas-slidable"></div>
 
