WCAG: Misc minor stuff

--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.Header.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.Header.cshtml
@@ -171,10 +171,10 @@
                    data-toggle="offcanvas"
                    data-target="#offcanvas-cart"
                    title="@T(Model.AddToCart.AvailableForPreOrder ? "ShoppingCart.PreOrder" : "ShoppingCart.AddToCart")">
-                    <i class="fa fa-cart-arrow-down"></i>
+                    <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
                 </a>
             </div>
-            <i class="fas fa-angle-up collapse-chevron m-0 ml-2"></i>
+            <i class="fas fa-angle-up collapse-chevron m-0 ml-2" aria-hidden="true"></i>
         </div>
     </div>
 </div>
