--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
@@ -20,7 +20,7 @@
 
     <div class="instasearch-addon d-flex align-items-center justify-content-center">
         <button type="button" class="instasearch-clear input-clear" aria-label="@T("Search.SearchBox.Clear")">
-            <i class="fa fa-xmark"></i>
+            <i class="fa fa-xmark" aria-hidden="true"></i>
         </button>
     </div>
     <span class="input-group-icon instasearch-icon">
