--- a/src/Smartstore.Web/Views/Product/Partials/Product.Bundle.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.Bundle.cshtml
@@ -40,7 +40,7 @@
                     if (img != null)
                     {
                         <a class="link-dnn" asp-route="Product" asp-route-SeName="@item.SeName" title="@item.Name">
-                            <img sm-file="img" sm-size="gallery.ThumbSize" attr-alt='(img.Alt.IsEmpty(), item.Name)' />
+                            <img sm-file="img" sm-size="gallery.ThumbSize" alt="@(img.Alt.IsEmpty() ? item.Name : img.Alt)" />
                         </a>
                     }
                     else
@@ -52,7 +52,7 @@
                 {
                     if (img != null)
                     {
-                        <img sm-file="img" sm-size="gallery.ThumbSize" attr-alt='(img.Alt.IsEmpty(), item.Name)' />
+                        <img sm-file="img" sm-size="gallery.ThumbSize" alt="@(img.Alt.IsEmpty() ? item.Name : img.Alt)" />
                     }
                     else
                     {
