WCAG: Added missing label in quantity input

--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.Header.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.Header.cshtml
@@ -111,6 +111,7 @@
     <div class="pd-assoc-title row gx-2 row-gap-1 align-items-center"
          aria-expanded="false"
          role="button"
+         tabindex="0"
          data-target="#@id"
          aria-controls="@id">
 
