WCAG: Fixed `aria-allowed-attr` rule violation by associated product header

--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.Header.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.Header.cshtml
@@ -108,13 +108,7 @@
 }
 
 <div class="card-title">
-    <div class="pd-assoc-title row gx-2 row-gap-1 align-items-center"
-         aria-expanded="false"
-         role="button"
-         tabindex="0"
-         data-target="#@id"
-         aria-controls="@id">
-
+    <div class="pd-assoc-title row gx-2 row-gap-1 align-items-center">
         @* Image / Name *@
         <div class="col-12 col-sm-@colSmSizeName col-md-@colMdSizeName col-lg-@colLgSizeName col-xl-@colXlSizeName">
             <div class="row gx-0 flex-nowrap">
