--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
@@ -26,7 +26,13 @@
                 var viewData = CreateViewData(product, true);
 
                 <div class="pd-assoc update-container" data-url="@product.UpdateUrl">
-                    <div class="pd-assoc-header collapsed" data-target="#@id" aria-expanded="false" data-partial="AssociatedHeader">
+                    <div class="pd-assoc-header collapsed"
+                         role="button"
+                         tabindex="0"
+                         data-target="#@id"
+                         aria-controls="@id"
+                         aria-expanded="false" 
+                         data-partial="AssociatedHeader">
                         <partial name="Product.AssociatedProduct.Header" model="product" view-data="viewData" />
                     </div>
                     <div id="@id" class="collapse" data-parent="#associated-products">
